removed base64 dependency